@@ -2473,6 +2473,37 @@ void* cfapi_object_get_property(int* type, ...)
 }
 
 /**
+ * Utility function to copy the string to op->msg and ensure there is a final newline.
+ *
+ * @param op
+ * object to copy to.
+ * @param msg
+ * message to copy.
+ */
+static void copy_message(object* op, const char* msg) {
+    char* temp;
+    int size;
+
+    if (!msg)
+        return;
+
+    size = strlen(msg);
+
+    if (msg[0] != 0 && msg[size - 1] == '\n') {
+        FREE_AND_COPY(op->msg, msg);
+        return;
+    }
+
+    temp = malloc(size + 2);
+    if (!temp)
+        fatal(OUT_OF_MEMORY);
+    snprintf(temp, size + 2, "%s\n", msg);
+    FREE_AND_COPY(op->msg, temp);
+    free(temp);
+}
+
+
+/**
  * Sets the property of an object.
  * Will send changes to client if required.
  * First argument should be an object*, second an integer..
@@ -2545,7 +2576,7 @@ void* cfapi_object_set_property(int* type, ...)
         case CFAPI_OBJECT_PROP_MESSAGE:
             sarg = va_arg(args, char*);
             *type = CFAPI_STRING;
-            FREE_AND_COPY(op->msg, sarg);
+            copy_message(op, sarg);
             break;
 
         case CFAPI_OBJECT_PROP_LORE:
